[package]
name = "atcoder-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ac-library-rs = "0.1.1"
once_cell = "1.19.0"
static_assertions = "1.1.0"
varisat = "0.2.2"
memoise = "0.3.2"
argio = "0.2.0"
bitvec = "1.0.1"
counter = "0.5.7"
hashbag = "0.1.12"
pathfinding = "4.9.1"
recur-fn = "2.2.0"
indexing = { version = "0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "4.6.0", features = [
    "c_raw",
    "rand",
    "stringly_conversions",
] }
amplify_derive = "4.0.0"
amplify_num = { version = "0.5.2", features = ["std"] }
easy-ext = "1.0.1"
multimap = "0.10.0"
btreemultimap = "0.1.1"
bstr = "1.9.1"
az = "1.2.1"
glidesort = "0.1.2"
tap = "1.0.1"
omniswap = "0.1.0"
multiversion = "0.7.3"
num = "0.4.1"
num-bigint = "0.4.4"
num-complex = "0.4.5"
num-integer = "0.1.46"
num-iter = "0.1.44"
num-rational = "0.4.1"
num-traits = "0.2.18"
num-derive = "0.4.2"
ndarray = "0.15.6"
nalgebra = "0.32.4"
alga = "0.9.3"
libm = "0.2.8"
rand = { version = "0.8.5", features = ["small_rng", "min_const_gen"] }
getrandom = "0.2.12"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand_hc = "0.3.2"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
petgraph = "0.6.4"
indexmap = "2.2.5"
regex = "1.10.3"
lazy_static = "1.4.0"
ordered-float = "4.2.0"
ascii = "1.1.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.12.1"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.10.0"
im-rc = "15.1.0"
fixedbitset = "0.5.0"
bitset-fixed = "0.1.0"
proconio = { version = "0.4.5", features = ["derive"] }
text_io = "0.1.12"
rustc-hash = "1.1.0"
smallvec = { version = "1.13.1", features = [
    "const_generics",
    "const_new",
    "write",
    "union",
    "serde",
    "arbitrary",
] }
